--- a/templates/adminpanel/home.html
+++ b/templates/adminpanel/home.html
@@ -60,7 +60,7 @@
             </div>
             <div class="col col-lg-3 col-sm-6">
                 <div class="inside-nav text-center">
-                    <a href="{% url "toolsImport" %}">
+                    <a href="{% url "ShowAllTools" %}">
                         <i class="fas fa-tools" style="font-size: 70px ; margin-top:15px ;margin-bottom: 20px"></i>
                         <p class="align-self-end">
                             مدیریت تجهیزات
