--- a/templates/adminpanel/showTools.html
+++ b/templates/adminpanel/showTools.html
@@ -68,7 +68,7 @@
                     <input class="form-control" placeholder="متن مورد نظر را وارد کنید ..." id="search">
                 </div>
                     <div class="col-lg-7 text-left">
-                        <a href="{% url "NewFactor" %}">
+                        <a href="{% url "ImportTools" %}">
                             <button type="button" class="btn btn-warning p-2">
                                 اضافه کردن مورد جدید
                             </button>
