--- a/templates/adminpanel/importTools.html
+++ b/templates/adminpanel/importTools.html
@@ -72,7 +72,11 @@
                         <input type="file" class="form-control text-left" id="name" name="csv"
                         >
                         <small id="emailHelp" class="form-text text-center" style="font-size: 10px ">
-                            فرمت فایل می باید CSV باشد . میتوانید نمونه فایل را از ایـــن لیــــنک دریافت کنید
+                            فرمت فایل می باید CSV باشد . میتوانید نمونه فایل را از
+                            <a href="http://shokuhsanat.pythonanywhere.com/static/Book1.csv">
+ایــــــــــن لیـــــــنک
+                            </a>
+                            دریافت کنید !
                         </small>
                     </div>
                     <div class="col-lg-4 form-group text-right">
